# $Id$

Griffith ChangeLog
------------------
(c) 2005-2006 Vasco Nunes, Piotr Ożarowski

2006-12-16 Piotr Ożarowski <ozarow@gmail.com>
	* WP, FDb and Onet movie plugins updated
	* movie plugins:
	  + allow "%s" in self.original_url_search and self.translated_url_search
	  + opening new page inside movie plugin is now as easy as: "self.new_page =  self.open_page(url='http://something')"
	* chardet added to optional dependencies
	* Import multiple files at once

2006-12-16 Jessica K. Parth <Jessica.K.P@women-at-work.org>
	* added a warning when there are no movies in the database to ( print cover, fetch poster, change poster, edit movie, delete movie, clone movie )
	* Import CSV Plugin updated (use chardet "http://chardet.feedparser.org/" to detect file format)

2006-12-15 Piotr Ożarowski <ozarow@gmail.com>
	* Added "N/A" to some fields in "technical information" tab (NULL in database)
	* Added some relations between windows
	* "Suggest unseen movie" now chooses movie from main list only (f.e. from specified collection)

2006-12-15 Jessica K. Parth <Jessica.K.P@women-at-work.org>
	* ODFb Plugin uses the quicksearch and returns much more and better results
	* KinoDE Plugin return both results for Video/DVD and Kino now and some small fixes
	* German Translation updated
	* Moviefone Plugin updated

2006-12-14 Piotr Ożarowski <ozarow@gmail.com>
	* Search for empty fields only option added

2006-12-13 Piotr Ożarowski <ozarow@gmail.com>
	* Import CSV plugin updated (thanks to Jessica)
	* Fixed "unique name" bug in update poster function
	* Import plugin is a lot faster now

2006-12-12 Piotr Ożarowski <ozarow@gmail.com>
	* Debian files updated
	* Docs updated
	* Some UI improvements
	* Selectable Amazon server (fetch bigger poster)
	* Added "--home" command line option
	* Double click on movies list -> open edit window

2006-12-10 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added three new movie plugins for spanish users -