@@ -4,6 +4,10 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2006 Vasco Nunes, Piotr Ożarowski
 
+2006-12-17 Piotr Ożarowski <ozarow@gmail.com>
+	* Stopklatka movie plugin updated
+	* Upgrade from old database: detect SQLite3 and print some hints
+
 2006-12-16 Piotr Ożarowski <ozarow@gmail.com>
 	* WP, FDb and Onet movie plugins updated
 	* movie plugins:
